<resources>
    <string name="app_name">Daily CashFlow</string>
    <string name="login_title">Selamat Datang Kembali!</string>
    <string name="login_desc">Saatnya kelola keuanganmu lagi.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Password ?</string>
    <string name="sign_in">Masuk</string>
    <string name="don_t_have_an_account">Belum punya akun? </string>
    <string name="register_now">Daftar</string>
    <string name="register_title">Buat Akunmu </string>
    <string name="register_desc"> dan mulai catat arus kas harian dengan\nmudah</string>
    <string name="name">Nama</string>
    <string name="sign_up">Daftar</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="login">Masuk</string>
    <string name="hello_user">Hello %1$s</string>
    <string name="log_out">Log Out</string>

    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>

    <!-- Range Date Filter   -->
    <string name="range_date_filter_daily">Hari ini</string>
    <string name="range_date_filter_weekly">Minggu ini</string>
    <string name="range_date_filter_monthly">Bulan ini</string>

    <string name="title_remaining_balance">Sisa Saldo</string>
    <string name="example_value_remaining_balance">Rp 0</string>
    <string name="desc_remaining_balance">Sisa saldo pertanggal %1$s</string>
    <string name="title_income">Pemasukan</string>
    <string name="example_value_income">Rp 0</string>
    <string name="desc_income">Update %1$s</string>
    <string name="title_expense">Pengeluaran</string>
    <string name="example_value_expense">Rp 0</string>
    <string name="desc_expense">Update %1$s</string>
    <string name="title_summary">Ringkasan</string>
    <string name="title_summary_income">Pemasukan :</string>
    <string name="title_summary_expense">Pengeluaran :</string>
    <string name="see_more"><u>Lihat Selengkapnya</u></string>
    <string name="label_pie_chart_income">Pemasukan (%1$s)</string>
    <string name="label_pie_chart_expense">Pengeluaran (%1$s)</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="title_transaction_history">Riwayat Transaksi</string>
    <string name="desc_btn_add_new_transaction">Tambah Transaksi Baru</string>
    <string name="example_title_item_transaction">Makan</string>
    <string name="example_desc_item_transaction">Makan Padang</string>
    <string name="example_date_item_transaction">Minggu, 18 September 2025</string>

    <string name="amount_item_income_transaction">+ %1$s</string>
    <string name="amount_item_expense_transaction">- %1$s</string>
    <string name="empty_transaction">Belum ada transaksi</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="please_check_network">Please check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="hint_name">Masukkan Nama</string>
    <string name="title_summary_total">Total :</string>


</resources>