<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_top_bottom"
        android:paddingHorizontal="24dp">


        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_auth"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/icon_person"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/ic_person"
                android:tint="?attr/colorPrimaryAuth"
                android:layout_gravity="center"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/login_title"
                android:textColor="?attr/colorPrimaryAuth"
                android:textSize="22sp"
                android:layout_gravity="center"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/login_desc"
                android:textSize="15sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email"
                android:textColor="?attr/colorLabelInputAuth"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_auth"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="?attr/colorOutlineInputAuth"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="15dp"
                    android:textColorHint="?attr/colorTextInputAuth"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_auth"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="?attr/colorOutlineInputAuth"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingVertical="15dp"
                    android:textColorHint="?attr/colorTextInputAuth"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorActionAuth"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/poppins_semibold"
            android:foregroundTint="?attr/colorTextActionAuth"
            android:paddingVertical="8dp"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:visibility="visible"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/layout_auth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible"
            app:indicatorColor="?attr/colorTextActionAuth"
            app:indicatorSize="30dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toTopOf="@id/btn_login"
            tools:visibility="visible" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/forget_password"
            android:textColor="?attr/colorActionAuth"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <LinearLayout
            android:id="@+id/btn_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="42dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/btn_forget_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_do_not_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="2dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="?attr/colorPrimaryAuth"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/btn_register_now"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingHorizontal="2dp"
                android:text="@string/register_now"
                android:textColor="?attr/colorActionAuth"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_do_not_have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_do_not_have_account"
                app:layout_constraintTop_toTopOf="@id/tv_do_not_have_account" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>