<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:strokeWidth="0dp"
    app:cardElevation="1dp"
    android:layout_marginVertical="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:background="@drawable/bg_item_transaction_history">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            tools:src="@drawable/ic_money_plus_line"
            tools:tint="?attr/colorValueIncomeItemTransactionHistory"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/example_title_item_transaction"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"
            android:gravity="center|start"
            android:layout_marginStart="12dp"
            android:textColor="?attr/colorTitleItemTransactionHistory"
            app:layout_constraintStart_toEndOf="@id/iv_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_summary"
            app:layout_constraintBottom_toTopOf="@id/tv_desc"
            app:layout_constraintVertical_chainStyle="packed"
            />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/example_desc_item_transaction"
            android:fontFamily="@font/inter_medium"
            android:textSize="10sp"
            android:gravity="center|start"
            android:textColor="?attr/colorDescItemTransactionHistory"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_summary"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/amount_item_income_transaction"
            android:fontFamily="@font/inter_medium"
            android:textSize="12sp"
            android:gravity="center|end"
            tools:textColor="?attr/colorValueIncomeItemTransactionHistory"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical_summary"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/example_date_item_transaction"
            android:fontFamily="@font/inter_medium"
            android:textSize="10sp"
            android:gravity="center|end"
            android:textColor="?attr/colorDescItemTransactionHistory"
            app:layout_constraintTop_toBottomOf="@id/tv_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical_summary"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>